@startuml
!define TABLE(x) class x << (T,#FFAAAA) >>

TABLE(warehouses) {
  + id : UUID <<PK>>
  + name : VARCHAR(255)
  + city : VARCHAR(100)
  + district : VARCHAR(100)
  + latitude : DOUBLE PRECISION
  + longitude : DOUBLE PRECISION
  + created_at : TIMESTAMP
  + updated_at : TIMESTAMP
  + deleted_at : TIMESTAMP
}

TABLE(inventory) {
  + id : UUID <<PK>>
  + name : VARCHAR(255)
  + price : BIGINT
  + product_id : UUID
  + total_quantity : INT
  + created_at : TIMESTAMP
  + updated_at : TIMESTAMP
  + deleted_at : TIMESTAMP
}

TABLE(inventory_items) {
  + id : UUID <<PK>>
  + inventory_id : UUID
  + warehouse_id : UUID
  + quantity : INT
  + created_at : TIMESTAMP
  + updated_at : TIMESTAMP
  + deleted_at : TIMESTAMP
}

TABLE(stock_journal) {
  + id : UUID <<PK>>
  + inventory_item_id : UUID
  + total_quantity_changed : INT
  + quantity_changed : INT
  + reason : VARCHAR(50)
  + type : VARCHAR(50)
  + status : VARCHAR(50)
  + created_at : TIMESTAMP
  + updated_at : TIMESTAMP
  + deleted_at : TIMESTAMP
}

' Define relationships (Foreign Key associations)
inventory "1" <-- "0..*" inventory_items : inventory_id FK
warehouses "1" <-- "0..*" inventory_items : warehouse_id FK
inventory_items "1" <-- "0..*" stock_journal : inventory_item_id FK

@enduml
